Fix save button alignment, restrict inputs, add sorting to teams grid

--- a/src/app/game-entry/game-entry.component.scss
+++ b/src/app/game-entry/game-entry.component.scss
@@ -38,4 +38,7 @@ mat-divider {
 .vsText {
   padding: 0 .5em;
 }
+mat-card-actions {
+  justify-content: center;
+}
 
