--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -28,3 +28,6 @@ $default-button-color: linear-gradient(135deg, #b9beff 0%, #c3e4ff 100%);
 label {
   margin-right: 3em;
 }
+mat-card-actions {
+  justify-content: center;
+}
