--- a/src/app/team-entry/team-entry.component.scss
+++ b/src/app/team-entry/team-entry.component.scss
@@ -41,3 +41,6 @@ table {
   border-radius: .5em;
   flex-grow: .4;
 }
+mat-card-actions {
+  justify-content: center;
+}
